[package]
name = "packet-builder"
version = "0.5.0"
description = "High-level library for interacting with low-level network data."
homepage = "https://github.com/hughesac/packet_builder"
repository = "https://github.com/hughesac/packet_builder"
license = "MIT OR Apache-2.0"
authors = [
  "Aaron Hughes <hughesac@gmail.com>",
]
readme = "README.md"
keywords = ["networking", "transport", "packet", "protocol", "packet-crafting"]
categories = ["network-programming"]


[dependencies]
derive-new = "0.5"
ipnetwork = "0.12.8"
pnet = "0.30.0"
